Added Team Page

--- a/team.html
+++ b/team.html
@@ -113,12 +113,12 @@
     <!--Team-->
     <div class="container features-container team-container">
       <div class="row">
-        <div>
+        <div class="col-md-8">
           <img src="..." alt="..." class="img-thumbnail" />
           <p>Keith Hendrick - PCM</p>
         </div>
         <br />
-        <div>
+        <div class="col-md-8">
           <img src="..." alt="..." class="img-thumbnail" />
           <p>Keith Hendrick - PCM</p>
         </div>
