Team page started

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <strong>Contact us now on</strong> - <a href="tel:018550066 ">(01) 855 00 66</a> or by mail <a href="mailto:dublincity.807@easternelectrical.ie"> Dublincity.807@easternelectrical.ie</a>
       </div>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Eastern Electrical | Eastwall</a>
+    <nav class="navbar navbar-expand-lg navbar-light ">
+        <a class="navbar-brand" href="index.html"><img src="images/EE.jpg" alt="Eastern Electrical Eastwall"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -30,11 +30,17 @@
               <a class="nav-link" href="team.html">Meet the Team</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/">About Us</a>
+              <a class="nav-link" href="/">News</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/">Case Studies</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/">Branch Locator</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Suppliers
+                Top Suppliers
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="https://www.anselluk.com/" target="_blank">Ansell</a>
@@ -51,7 +57,6 @@
                 <a class="dropdown-item" href="https://www.snickersworkwear.ie/"target="_blank">Snickers</a>
                 <a class="dropdown-item" href="https://www.wiha.com/int/en/" target="_blank">WIHA</a>
                 <a class="dropdown-item" href="https://www.carlkammerling.com/" target="_blank">CK Tools</a>
-                <a class="dropdown-item" href="https://www.briticent.co.uk/" target="_blank">Bracken Heath | Briticent</a>
               </div>
             </li>
           </ul>
@@ -60,14 +65,19 @@
       <!--/.Navbar-->
 
       <!--Callout-->
-      <div class="container-fluid callout-container">
-        <div class="jumbotron">
-            <h1 class="display-4">Eastern Electrical Dublin City</h1>
-            <p class="lead">Great Service, Products and Flexibility.</p>
-            <hr class="my-4">
-            <strong><p> New Customer offer - Check it out! </p></strong>
-            <a class="btn btn-primary btn-lg" href="/" role="button">New Customers</a>
+      <div class="container callout-container">
+        <div class="opaque-overlay">&nbsp;</div>
+        <div class="row">
+          <div class="col-12">
+            <section class="jumbotron">
+              <h1 class="display-4">Eastern Electrical Dublin City</h1>
+              <p class="lead">Great Service, Products and Flexibility.</p>
+              <hr class="my-4">
+              <strong><p> Check out our opening hours </p></strong>
+              <a class="btn btn-primary btn-lg" href="opening-hours.html" role="button">Opening Hours</a>
+            </section>
           </div>
+        </div>
       </div>
       <!--/.Callout-->
       <hr>
@@ -93,23 +103,30 @@
       <!--/.Features-->
       <hr>
       <!--Footer-->
-      <footer class="footer-container">
+      <footer class=" container-fluid footer-container">
         <div class="container features-container">
             <div class="row">
-              <div class="col-sm">
-                One of three columns
+              <div class="col dropdown-item-sm">
+                <h5>Customer Services</h5>
+                <p>Help and Contact</p>
+                <p>Returns</p>
               </div>
-              <div class="col-sm">
-                One of three columns
+              <div class="col hidden-sm">
+                <h5>Trading with us</h5>
+                <p>Same day delivery</p>
+                <p>View our branches</p>
+                <p>Request a catolgue</p>
               </div>
-              <div class="col-sm">
-                One of three columns
+              <div class="col hidden-sm">
+                <h5>About Eastern Electrical</h5>
+                <p>About us</p>
+                <p></p>
               </div>
             </div>
           </div>
       </footer>
       <!--Footer-->
-    
+
 
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
