--- a/team.html
+++ b/team.html
@@ -25,107 +25,143 @@
 
   <body>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Eastern Electrical | Eastwall</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+    <nav class="navbar navbar-expand-lg navbar-light ">
+      <a class="navbar-brand" href="index.html">Eastern Electrical Eastwall</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html"
-              >Home <span class="sr-only"></span
-            ></a>
+            <a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="team.html">Meet the Team</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/">About Us</a>
+            <a class="nav-link" href="/">News</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/">Case Studies</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/">Branch Locator</a>
           </li>
           <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdownMenuLink"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              Suppliers
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Top Suppliers
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="https://www.anselluk.com/"
-                >Ansell</a
-              >
-              <a class="dropdown-item" href="https://www.mennekes.com/"
-                >Mennekes</a
-              >
-              <a class="dropdown-item" href="https://www.hager.ie/">Hager</a>
-              <a class="dropdown-item" href="https://craigandderricott.co.uk/"
-                >Craig & Dericott</a
-              >
-              <a class="dropdown-item" href="https://www.se.com/ie/en/"
-                >Schneider</a
-              >
-              <a class="dropdown-item" href="https://robus.com/">Robus</a>
-              <a class="dropdown-item" href="https://www.unitrunk.co.uk/"
-                >Unitrunk</a
-              >
-              <a class="dropdown-item" href="https://www.ledvance.com/"
-                >Ledvance</a
-              >
-              <a class="dropdown-item" href="https://www.atc.ie/">ATC</a>
-              <a class="dropdown-item" href="https://espi.ie/">ESPI</a>
-              <a
-                class="dropdown-item"
-                href="https://www.glendimplexireland.com/"
-                >Dimpco</a
-              >
-              <a class="dropdown-item" href="https://www.snickersworkwear.ie/"
-                >Snickers</a
-              >
-              <a class="dropdown-item" href="https://www.wiha.com/int/en/"
-                >WIHA</a
-              >
-              <a class="dropdown-item" href="https://www.carlkammerling.com/"
-                >CK Tools</a
-              >
-              <a class="dropdown-item" href="https://www.briticent.co.uk/"
-                >Bracken Heath | Briticent</a
-              >
+              <a class="dropdown-item" href="https://www.anselluk.com/" target="_blank">Ansell</a>
+              <a class="dropdown-item" href="https://www.mennekes.com/" target="_blank">Mennekes</a>
+              <a class="dropdown-item" href="https://www.hager.ie/" target="_blank">Hager</a>
+              <a class="dropdown-item" href="https://craigandderricott.co.uk/" target="_blank">Craig & Dericott</a>
+              <a class="dropdown-item" href="https://www.se.com/ie/en/" target="_blank">Schneider</a>
+              <a class="dropdown-item" href="https://robus.com/" target="_blank">Robus</a>
+              <a class="dropdown-item" href="https://www.unitrunk.co.uk/" target="_blank">Unitrunk</a>
+              <a class="dropdown-item" href="https://www.ledvance.com/" target="_blank">Ledvance</a>
+              <a class="dropdown-item" href="https://www.atc.ie/" target="_blank">ATC</a>
+              <a class="dropdown-item" href="https://espi.ie/" target="_blank">ESPI</a>
+              <a class="dropdown-item" href="https://www.glendimplexireland.com/" target="_blank">Dimpco</a>
+              <a class="dropdown-item" href="https://www.snickersworkwear.ie/"target="_blank">Snickers</a>
+              <a class="dropdown-item" href="https://www.wiha.com/int/en/" target="_blank">WIHA</a>
+              <a class="dropdown-item" href="https://www.carlkammerling.com/" target="_blank">CK Tools</a>
             </div>
           </li>
         </ul>
       </div>
     </nav>
     <!--/.Navbar-->
+    <br>
+    <!--/.Header-->
+    <header class="team-header">
+      <h2> Eastern Electrical Eastwall Team - Please feel free to contact us with any queries!</h2>
+    </header>
+    <!--/.Header-->
 
     <!--Team-->
-    <div class="container features-container team-container">
+    <div class="container team-container">
       <div class="row">
-        <div class="col-md-8">
-          <img src="..." alt="..." class="img-thumbnail" />
-          <p>Keith Hendrick - PCM</p>
+        <div class="col">
+          <a href="#" target="_blank"
+            ><img src="images/Keith.jpg" alt="Keith" class="avatar" /><div>Keith
+            Hendrick (PCM)</div></a
+          >
         </div>
-        <br />
-        <div class="col-md-8">
-          <img src="..." alt="..." class="img-thumbnail" />
-          <p>Keith Hendrick - PCM</p>
+        <div class="col">
+          <a href="#" target="_blank"
+            ><img src="images/richie.jpg" alt="Richard" class="avatar" /><div>Richard
+            (Inventory Controller)</div></a
+          >
+        </div>
+        <div class="w-100"></div>
+        <div class="col">
+          <a href="#" target="_blank"
+            ><img src="images/scott.png" alt="Scott" class="avatar" /><div>Scott
+            (Account Manager/Internal Sales)</div></a
+          >
+        </div>
+        <div class="col">
+          <a href="#" target="_blank"
+            ><img src="images/Dominic.jpg" alt="Dominic" class="avatar" /><div> Dominic
+            (Account Manager/Internal Sales)</div></a
+          >
+        </div>
+        <div class="w-100"></div>
+        <div class="col">
+          <a href="#" target="_blank"
+            ><img src="images/darren.png" alt="Darren" class="avatar" /><div> Darren
+            (Account Manager/Internal Sales)</div></a
+          >
+        </div>
+        <div class="col">
+          <a href="#" target="_blank"
+            ><img src="images/kevin.png" alt="Kevin" class="avatar" /><div> Kevin
+            (Business Development Manager)</div></a
+          >
+        </div>
+        <div class="w-100"></div>
+        <div class="col">
+          <a href="#" target="_blank"
+            ><img src="images/dylan.jpg" alt="Dylan" class="avatar" /><div>Dylan
+            (Warehouse Operations)</div></a
+          >
+        </div>
+        <div class="col">
+          <a href="#" target="_blank"
+            ><img src="images/jasmine.png" alt="Jamine" class="avatar" /><div>Jasmine
+            (Van Driver)</div></a
+          >
         </div>
       </div>
     </div>
     <!--/.Team-->
-
+    <br>
+    <hr>
+    <!--Footer-->
+    <footer class="container-fluid footer-container">
+      <div class="container features-container">
+        <div class="row">
+          <div class="col dropdown-item-sm">
+            <h5>Customer Services</h5>
+            <p>Help and Contact</p>
+            <p>Returns</p>
+          </div>
+          <div class="col hidden-sm">
+            <h5>Trading with us</h5>
+            <p>Same day delivery</p>
+            <p>View our branches</p>
+            <p>Request a catolgue</p>
+          </div>
+          <div class="col hidden-sm">
+            <h5>About Eastern Electrical</h5>
+            <p>About us</p>
+            <p></p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!--Footer-->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
