Main Page updated (break from side project)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="alert alert-primary" role="alert">
-        <strong>Contact us now on</strong> - <a href="tel:018550066 ">(01) 855 00 66</a> or by mail <a href="mailto:dublincity.807@easternelectrical.ie"> Dublincity.807@easternelectrical.ie</a>
+        <strong>Contact us now on</strong> - <a href="tel:018550066 " target="_blank">(01) 855 00 66</a> or by mail <a href="mailto:dublincity.807@easternelectrical.ie" target="_blank"> Dublincity.807@easternelectrical.ie</a>
       </div>
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light ">
@@ -65,14 +65,13 @@
       <!--/.Navbar-->
 
       <!--Callout-->
-      <div class="container callout-container">
+      <div class=" callout-container">
         <div class="opaque-overlay">&nbsp;</div>
         <div class="row">
           <div class="col-12">
             <section class="jumbotron">
               <h1 class="display-4">Eastern Electrical Dublin City</h1>
               <p class="lead">Great Service, Products and Flexibility.</p>
-              <hr class="my-4">
               <strong><p> Check out our opening hours </p></strong>
               <a class="btn btn-primary btn-lg" href="opening-hours.html" role="button">Opening Hours</a>
             </section>
@@ -115,7 +114,7 @@
                 <h5>Trading with us</h5>
                 <p>Same day delivery</p>
                 <p>View our branches</p>
-                <p>Request a catolgue</p>
+                <p>Request a catologue</p>
               </div>
               <div class="col hidden-sm">
                 <h5>About Eastern Electrical</h5>
